--- a/animation/Loading.html
+++ b/animation/Loading.html
@@ -3,6 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>使用三角函数实现Loading效果</title>
+        <style>
+            body {
+                margin: 0;
+            }
+            body {
+                width: 100vw;
+                height: 100vh;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        </style>
     </head>
     <body>
         <svg width="300" height="150">
