--- a/WebGame/mxtanGame/index.html
+++ b/WebGame/mxtanGame/index.html
@@ -9,184 +9,68 @@
             border: 1px black solid;
         }
     </style>
+    <script src="utils.js"></script>
+    <script src="game.js"></script>
+    <script src="paddle.js"></script>
+    <script src="ball.js"></script>
+    <script src="block.js"></script>
+    <script src="level.js"></script>
 </head>
 
 <body>
     <canvas id="id-canvas" width="400" height="300"></canvas>
+    <hr>
+    <input id="id-input-speed" type="range" value="1">
 <script>
-var log = console.log.bind(console)
 
-var imageFromPath = function(path) {
-    var img = new Image()
-    img.src = path
-    return img
+var loadLevel = function(n) {
+    n = n - 1
+    var level = levels[n]
+    var blocks = []
+    for (let i = 0; i < level.length; i++) {
+        var p = level[i]
+        let b = Block(p)
+        b.x = p[0]
+        b.y = p[1]
+        blocks.push(b)
+    }
+    return blocks
 }
 
-var Paddle = function() {
-    var image = imageFromPath('paddle.png')
-    var o = {
-        image: image,
-        x: 100,
-        y: 250,
-        speed: 10,
+var blocks = []
+var enableDebugMode = function(enable) {
+    if (!enable) {
+        return
     }
-    var paddle = o
-    o.move = function(x) {
-        if (x < 0) {
-            x = 0
-        }
-        if (x > 400 - o.image.width) {
-            x = 400 - o.image.width
-        }
-        o.x = x
-    }
-    o.moveLeft = function() {
-        o.move(paddle.x - paddle.speed)
-    }
-    o.moveRight = function() {
-        o.move(paddle.x + paddle.speed)
-    }
-    o.collide = function(ball) {
-        if (ball.y + ball.image.height > o.y) {
-            if (ball.x > o.x && ball.x < o.x + o.image.width) {
-                return true
-            }
-        }
-        return false
-    }
-
-    return o
-}
-
-var Ball = function() {
-    var image = imageFromPath('ball.png')
-    var o = {
-        image: image,
-        x: 100,
-        y: 200,
-        speedX: 10,
-        speedY: 10,
-        fired: false,
-    }
-    o.fire = function() {
-        o.fired = true
-    }
-    o.stop = function() {
-        o.fired = false
-    }
-    o.move = function() {
-        if (o.fired) {
-            // log('move')
-            if (o.x < 0 || o.x > 400) {
-                o.speedX = -o.speedX
-            }
-            if (o.y < 0 || o.y > 300) {
-                o.speedY = -o.speedY
-            }
-            // move
-            o.x += o.speedX
-            o.y += o.speedY
-        }
-    }
-    
-    o.bound = function() {
-        o.speedY *= -1
-    }
-
-    return o
-}
-
-var rectIntersects = function(a, b)  {
-    var o = a;
-    if (b.y + o.y && b.y < o.y + b.image.height) {
-        if (b.x > o.x && b.x < o.x + o.image.width) {
-            log('相撞')
-            return true
-        }
-    }
-    return false;
-}
-
-var Block = function() {
-    var image = imageFromPath('block.png')
-    var o = {
-        image: image,
-        x: 100,
-        y: 100,
-        w: 50,
-        h: 20,
-        alive: true,
-    }
-    o.kill = function() {
-        o.alive = false
-    }
-    o.collide = function(b) {
-        return o.alive && (rectIntersects(o, b) || rectIntersects(b, o))
-    }
-    return o
-}
-
-var GuaGame = function() {
-    var g = {
-        actions: {},
-        keydowns: {},
-    }
-    var canvas = document.querySelector('#id-canvas')
-    var context = canvas.getContext('2d')
-
-    g.canvas = canvas
-    g.context = context
-    //draw
-    g.drawImage = function(guaImage) {
-        g.context.drawImage(guaImage.image, guaImage.x, guaImage.y)
-    }
-    //events
+    window.paused = false
+    // 这是为了 debug
     window.addEventListener('keydown', function(event) {
-        g.keydowns[event.key] = true;
+        var k = event.key
+        if (k == 'p') {
+            // 暂停功能
+            window.paused = !window.paused
+        } else if ('1234567'.includes(k)) {
+            // 为了 debug 临时加的载入关卡功能
+            blocks = loadLevel(Number(k))
+        } 
     })
-    window.addEventListener('keyup', function(event) {
-        g.keydowns[event.key] = false;
+    // 控制速度
+    document.querySelector('#id-input-speed').addEventListener('input', function(event) {
+        var input = event.target
+        window.fps = Number(input.value)
     })
-
-    g.registerAction = function(key, callback) {
-        g.actions[key] = callback
-    }
-
-    // timer
-    setInterval(function() {
-        // events
-        var actions = Object.keys(g.actions)
-        for (var i = 0; i < actions.length; i++) {
-            var key = actions[i]
-            if (g.keydowns[key]) {
-                // 如果按键被按下，调用注册的action
-                g.actions[key]()
-            }
-        }
-        // update
-        g.update()
-        // clear
-        context.clearRect(0, 0, canvas.width, canvas.height)
-        // draw
-        g.draw()
-    }, 1000/60)
-
-    return g
 }
 
 var __main = function() {
-    var game = GuaGame()
+    enableDebugMode(true)
+
+    var game = GuaGame(30)
 
     var paddle = Paddle()
     var ball = Ball()
 
-    var blocks = []
-    for (let i = 0; i < 3; i++) {
-        let b = Block()
-        b.x = i * 150
-        b.y = 50
-        blocks.push(b)
-    }
+    blocks = loadLevel(1)
+
 
     var paused = false
     game.registerAction('a', function() {
@@ -198,14 +82,9 @@ var __main = function() {
     game.registerAction('f', function() {
         ball.fire()
     })
-    window.addEventListener('keydown', function(event) {
-        if (event.key == 'p') {
-            paused = !paused
-        }
-    })
 
     game.update = function() {
-        if (paused) {
+        if (window.paused) {
             return 
         }
         ball.move()
