--- a/WebGame/mxtanGame/index.html
+++ b/WebGame/mxtanGame/index.html
@@ -15,6 +15,8 @@
     <script src="ball.js"></script>
     <script src="block.js"></script>
     <script src="level.js"></script>
+    <script src="scene.js"></script>
+    <script src="scene_end.js"></script>
 </head>
 
 <body>
