--- a/WebGame/mxtanGame/index.html
+++ b/WebGame/mxtanGame/index.html
@@ -9,14 +9,15 @@
             border: 1px black solid;
         }
     </style>
-    <script src="utils.js"></script>
-    <script src="game.js"></script>
-    <script src="paddle.js"></script>
-    <script src="ball.js"></script>
-    <script src="block.js"></script>
+    <script src="game/utils.js"></script>
+    <script src="game/game.js"></script>
+    <script src="scene/main/paddle.js"></script>
+    <script src="scene/main/ball.js"></script>
+    <script src="scene/main/block.js"></script>
+    <script src="scene/main/scene.js"></script>
+    <script src="scene/end/scene_end.js"></script>
+    <script src="scene/title/scene_title.js"></script>
     <script src="level.js"></script>
-    <script src="scene.js"></script>
-    <script src="scene_end.js"></script>
 </head>
 
 <body>
