--- a/WebGame/mxtanGame/index.html
+++ b/WebGame/mxtanGame/index.html
@@ -9,14 +9,19 @@
             border: 1px black solid;
         }
     </style>
+    <!-- game 相关文件 -->
     <script src="game/utils.js"></script>
     <script src="game/game.js"></script>
+    <script src="game/mxtan_scene.js"></script>
+    <!-- 场景文件 -->
     <script src="scene/main/paddle.js"></script>
     <script src="scene/main/ball.js"></script>
     <script src="scene/main/block.js"></script>
     <script src="scene/main/scene.js"></script>
+    <!-- 结束和标题场景 -->
     <script src="scene/end/scene_end.js"></script>
     <script src="scene/title/scene_title.js"></script>
+    <!-- 关卡数据 -->
     <script src="level.js"></script>
 </head>
 
