--- a/WebGame/mxtanGame-Practice/index.html
+++ b/WebGame/mxtanGame-Practice/index.html
@@ -15,6 +15,7 @@
     <script src="paddle.js"></script>
     <script src="utils.js"></script>
     <script src="levels.js"></script>
+    <script src="levels.js"></script>
 </head>
 
 <body>
