--- a/WebGame/mxtanGame.1/index.html
+++ b/WebGame/mxtanGame.1/index.html
@@ -13,6 +13,7 @@
     <script src="game/utils.js"></script>
     <script src="game/game.js"></script>
     <script src="game/mxtan_scene.js"></script>
+    <script src="game/mxtan_image.js"></script>
     <!-- 场景文件 -->
     <script src="scene/main/paddle.js"></script>
     <script src="scene/main/ball.js"></script>
