--- a/WebGame/mxtanGame.1/index.html
+++ b/WebGame/mxtanGame.1/index.html
@@ -27,13 +27,66 @@
 </head>
 
 <body>
-    <canvas id="id-canvas" width="400" height="300"></canvas>
+    <canvas id="id-canvas" width="400" height="600"></canvas>
     <hr>
     <input id="id-input-speed" type="range" value="1">
     <div class="">
         <!-- <textarea id="id-text-log" cols="50" rows="20"></textarea> -->
     </div>
+    <div>
+        <label>
+            <input class="mxtan-auto-slider" type="range" value="" 
+            max="20"
+            data-value="config.player_speed">
+            玩家速度：<span class="mxtan-label"></span>
+        </label>
+    </div>
+    <div>
+        <label>
+            <input class="mxtan-auto-slider" type="range" value="" 
+            max="20"
+            data-value="config.bullet_speed">
+            bullet速度：<span class="mxtan-label"></span>
+        </label>
+    </div>
+    <div>
+        <label>
+            <input class="mxtan-auto-slider" type="range" value="" data-value="config.fire_cooldown">
+            子弹冷却时间速度：<span class="mxtan-label"></span>
+        </label>
+    </div>
+    <div>
+        <label>
+            <input class="mxtan-auto-slider" type="range" value="" 
+            min="-10"
+            min="10"
+            data-value="config.colud_speed">
+            colud速度：<span class="mxtan-label"></span>
+        </label>
+    </div>
     <script src="main.js"></script>
+    <script>
+        var es = sel => document.querySelectorAll(sel)
+        var bindAll = function(sel, eventName, callback) {
+            var l = es(sel)
+            for (let i = 0; i < l.length; i++) {
+                let input = l[i]
+                input.addEventListener(eventName, function(event) {
+                    callback(event)
+                })
+            }
+        }
+
+        bindAll('.mxtan-auto-slider', 'input', function(event) {
+            let target = event.target
+            let bindVar = target.dataset.value
+            let v = target.value
+            eval(bindVar + '=' + v)
+
+            let label = target.closest('label').querySelector('.mxtan-label')
+            label.innerText = v
+        })
+    </script>
 </body>
 
 </html>
