--- a/WebGame/mxtanGame.1/index.html
+++ b/WebGame/mxtanGame.1/index.html
@@ -14,6 +14,7 @@
     <script src="game/game.js"></script>
     <script src="game/mxtan_scene.js"></script>
     <script src="game/mxtan_image.js"></script>
+    <script src="game/mxtan_particle_system.js"></script>
     <!-- 场景文件 -->
     <script src="scene/main/paddle.js"></script>
     <script src="scene/main/ball.js"></script>
