--- a/WebGame/mxtanGame.2/index.html
+++ b/WebGame/mxtanGame.2/index.html
@@ -15,6 +15,8 @@
     <script src="game/mxtan_scene.js"></script>
     <script src="game/mxtan_image.js"></script>
     <script src="game/mxtan_particle_system.js"></script>
+    <script src="game/mxtan_label.js"></script>
+    <script src="game/mxtan_animation.js"></script>
     <!-- 场景文件 -->
     <script src="scene/main/paddle.js"></script>
     <script src="scene/main/ball.js"></script>
