--- a/cssPractice/double-eleven/index.html
+++ b/cssPractice/double-eleven/index.html
@@ -10,12 +10,9 @@
 <body>
     <div class="container">
         <!-- 渐变边框 -->
-        <div class="gradient-border-test">
-    
-        </div>
+        <div class="gradient-border-test"></div>
         <div class="gradient-border-test1">
-            <div class="content">
-            </div>
+            <div class="content"></div>
         </div>
     </div>
 </body>
