--- a/cssPractice/double-eleven/index.html
+++ b/cssPractice/double-eleven/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container"> -->
         <!-- 渐变边框 -->
         <div class="gradient-border-test"></div>
         <div class="gradient-border-test1">
             <div class="content"></div>
         </div>
-    </div>
+        <div class="gradient-border-test2">
+        </div>
+        <div class="btn btn-default">default</div>
+        <div class="btn btn-default">default</div>
+        <div class="btn btn-circle">circle</div>
+        <div class="btn btn-success">success</div>
+        <div class="btn btn-info">info</div>
+        <div class="btn btn-group">group</div>
+    <!-- </div> -->
 </body>
 </html>
