--- a/WebGame/mxtanGame.4/mario.html
+++ b/WebGame/mxtanGame.4/mario.html
@@ -11,6 +11,7 @@
 <body>
     <h3></h3>
     <canvas id="id-canvas" width="640" height="640"></canvas>
+    <canvas id="id-canvas-sprite" width="160" height="320"></canvas>
     <div class="mxtan-controls">
         <button data-action="change_offset" data-offset="-1024">-1024</button>
         <button data-action="change_offset" data-offset="-16">-16</button>
@@ -69,6 +70,23 @@
             }
         }
 
+        const drawSprite = data => {
+            let context = e('#id-canvas-sprite').getContext('2d')
+            let pixelsPerBlock = 8
+            let pixelWidth = 10
+            let blockSize = pixelsPerBlock * pixelWidth
+            let offset = 0
+            for (let i = 0; i < 4; i++) {
+                for (let j = 0; j < 2; j++) {
+                    let x = j * blockSize
+                    let y = i * blockSize
+                    let pixels = data.slice(offset)
+                    drawBlock(context, pixels, x, y, pixelWidth)
+                    offset += 16
+                }
+            }
+        }
+
         const drawNes = bytes => {
             // 78 69
             // 0100 1110 0100 0101
@@ -105,16 +123,37 @@
                 let offset = Number(event.target.dataset.offset)
                 actions[action] && actions[action](offset)
             })
+            window.addEventListener('keydown', event => {
+                if (event.key = 'p') {
+                    window.paused = !window.paused
+                }
+            })
         }
 
         const __main = () => {
+            window.paused = false
             window.offset = 32784
+            let tileOffset = 32784
             let request = {
                 url: 'mario.nes',
                 callback(r) {
                     window.bytes = new Uint8Array(r)
                     log('bytes', bytes)
                     drawNes(bytes)
+                    let step = 0
+                    let bytesPerBlock = 16
+                    let tilesPerSprite = 8
+                    let bytesPerSprite = bytesPerBlock * tilesPerSprite
+                    setInterval(() => {
+                        let offset = tileOffset + step * bytesPerSprite
+                        drawSprite(bytes.slice(offset))
+                        if (window.paused) {
+                            // 暂停
+                        } else {
+                            step++
+                            step %= 4
+                        }
+                    }, 200);
                 },
             }
             ajax(request)
