--- a/WebGame/mxtanGame-Practice/index.html
+++ b/WebGame/mxtanGame-Practice/index.html
@@ -9,21 +9,28 @@
             border: 1px black solid;
         }
     </style>
-    <script src="game.js"></script>
-    <script src="ball.js"></script>
-    <script src="block.js"></script>
-    <script src="paddle.js"></script>
-    <script src="utils.js"></script>
-    <script src="levels.js"></script>
-    <script src="levels.js"></script>
+    <!-- game 相关文件 -->
+    <script src="game/utils.js"></script>
+    <script src="game/game.js"></script>
+    <script src="game/mxtan_scene.js"></script>
+    <!-- 场景文件 -->
+    <script src="scene/main/paddle.js"></script>
+    <script src="scene/main/ball.js"></script>
+    <script src="scene/main/block.js"></script>
+    <script src="scene/main/scene.js"></script>
+    <!-- 结束和标题场景 -->
+    <script src="scene/end/scene_end.js"></script>
+    <script src="scene/title/scene_title.js"></script>
+    <!-- 关卡数据 -->
+    <script src="level.js"></script>
 </head>
 
 <body>
     <canvas id="id-canvas" width="400" height="300"></canvas>
-    <br>
-    <input id="id-input-speed" type="range" value="1" min="1">
-    <div>
-        当前速度：<span id="current-speed"></span>
+    <hr>
+    <input id="id-input-speed" type="range" value="1">
+    <div class="">
+        <!-- <textarea id="id-text-log" cols="50" rows="20"></textarea> -->
     </div>
     <script src="main.js"></script>
 </body>
