--- a/WebGame/mxtanGame.5/index.html
+++ b/WebGame/mxtanGame.5/index.html
@@ -26,6 +26,7 @@
     <!-- 结束和标题场景 -->
     <script src="scene/end/scene_end.js"></script>
     <script src="scene/title/scene_title.js"></script>
+    <script src="scene/editor/scene_editor.js"></script>
     <!-- 关卡数据 -->
     <script src="level.js"></script>
     <!-- 配置文件 -->
@@ -33,7 +34,8 @@
 </head>
 
 <body>
-    <canvas id="id-canvas" width="400" height="600"></canvas>
+    <canvas id="id-canvas" width="256" height="160"></canvas>
+    <!-- <canvas id="id-canvas" width="512" height="480"></canvas> -->
     <hr>
     <input id="id-input-speed" type="range" value="1">
     <div class="mxtan-controls">
